--- a/style.css
+++ b/style.css
@@ -6,6 +6,18 @@ html {
     box-sizing: inherit;
 }
 
+.silkscreen-regular {
+    font-family: "Silkscreen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.silkscreen-bold {
+    font-family: "Silkscreen", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
 #my-canvas{
     border: 1px solid red;
     position: absolute;
@@ -17,7 +29,10 @@ html {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-
+    
+    font-family: "Silkscreen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 #binary{
