--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ html {
 }
 
 #my-canvas{
-    border: 1px solid red;
+    border: 1px solid black;
     position: absolute;
 }
 
 .container-binary{
-    border: 1px solid red;
+    /* border: 1px solid green; */
     width: 700px;
     display: flex;
     flex-direction: row;
@@ -40,7 +40,7 @@ html {
     width: 50px;
     height: 50px;
     text-align: center;
-    font-size: 30px;
+    font-size: 23px;
 }
 
 .numero{
@@ -49,7 +49,25 @@ html {
 }
 
 .container-button{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     width: 700px;
     text-align: center;
+}
+
+.container-number{
+    border: 1px solid green;
+    width: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    
+    font-family: "Silkscreen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+}
+
+button{
+    font-family: "Silkscreen", sans-serif;
+    font-size: 20px;
 }
