--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html {
 }
 
 #binary{
-    border: 1px solid green;
+    /* border: 1px solid green; */
     width: 50px;
     height: 50px;
     text-align: center;
@@ -57,7 +57,7 @@ html {
 }
 
 .container-number{
-    border: 1px solid green;
+    /* border: 1px solid green; */
     width: 700px;
     display: flex;
     flex-direction: row;
@@ -68,8 +68,56 @@ html {
     font-style: normal;
 
 }
-
+/* 35aa2c cera de velas */
+/* 3bdd00 El verde del collar del perro */
+/* 09250f Y el verde del fondo */
+/* 031407 el verde oscuro de las cadenas */
+/* c2edc0 verde HUD*/
+/* 8cff00 verde vela*/
 button{
     font-family: "Silkscreen", sans-serif;
     font-size: 20px;
+    color: #c2edc0;
+    background-color: #035507;
+    /* background-color: #338541; */
+    box-shadow: 1px 3px #09250f ;
+    /* box-shadow: 10px 5px #8cff00; */
+    border-radius: 30px;
+}
+
+button:hover{
+    background-color: #04790a;
+    /* background-color: #13eb37; */
+}
+
+button:active{
+    box-shadow: 0.5px 1.5px #09250f ;
+    background-color: #b6e3bd;
+    color: #035507;
+}
+
+.off{
+    /* opacity: 0; */
+    background-image: url(Assets/OFF.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 108px;
+    height: 108px; 
+    /* border: 1px solid red; */
+    /* background-color: aqua; */
+    /* color: transparent; */
+    color: blue;
+}
+
+.on{
+    /* opacity: 0; */
+    background-image: url(Assets/ON.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 108px;
+    height: 108px; 
+    /* border: 1px solid red; */
+    /* background-color: aqua; */
+    /* color: transparent; */
+    color: red;
 }
